<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.fragments.CurrentLocationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TvExtraHeadingStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/my_current_location"/>

        <EditText
            android:hint="@string/enter_address_here"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/editTextStyle"/>
        <TextView
            style="@style/TvTitleStyle"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/telephone_mobile"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_height="wrap_content">
            <EditText
                android:hint=""
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/editTextStyle"/>
            <EditText
                android:hint="300 0000000"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                style="@style/editTextStyle"/>

        </LinearLayout>

        <TextView
            android:textSize="@dimen/_30sdp"
            android:text="@string/or"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/TvExtraHeadingStyle"/>
        <TextView
            style="@style/TvTitleStyle"
            android:layout_marginTop="@dimen/_15sdp"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:text="@string/to_continue_turn_on_device_location_and_press_ok"/>

        <EditText
            android:drawableRight="@drawable/ic_pick_location"
            android:hint="@string/auto_enter_current_location"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/editTextStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="wrap_content">
            <TextView
                style="@style/TvTitleStyle"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:text="@string/telephone_mobile"/>
            <TextView
                style="@style/TvHeadingStyle"
                android:layout_weight=".5"
                android:textAlignment="viewEnd"
                android:layout_width="0dp"
                android:text="0300 0000000"/>
        </LinearLayout>

        <Button
            android:text="@string/ok"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/buttonStyle"/>
    </LinearLayout>


</LinearLayout>