<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="visible"
            android:id="@+id/llChangePassword"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="15dp">


            <TextView
                style="@style/TvExtraHeadingStyle"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="viewStart"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/change_password" />

            <TextView
                style="@style/TvHeadingStyle"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="viewStart"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/colorDarkGrey"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/change_your_current_password" />



            <EditText
                android:id="@+id/etOldPassword"
                style="@style/editTextStyle"
                android:layout_marginTop="@dimen/_50sdp"
                android:hint="@string/enter_current_password"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/etPassword"
                style="@style/editTextStyle"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etReTypePassword"
                style="@style/editTextStyle"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/btnChangePassword"
                style="@style/buttonStyle"
                android:layout_marginTop="@dimen/_18sdp"
                android:background="@drawable/button_background"
                android:text="@string/change_password" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>