<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/splash_background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_10sdp"
    android:paddingRight="@dimen/_10sdp"
    tools:context="com.rapidzz.presero.Views.fragments.SignInFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/_90sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:fontFamily="@font/poppins_regular"
                style="@style/TvHeadingStyle"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="center"
                android:textSize="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/colorWhite"
                android:text="Welcome Back !" />
            <TextView
                style="@style/TvHeadingStyle"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorWhite"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/operators_list" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <Spinner
                android:id="@+id/spOperatorLists"
                style="@style/editTextStyle"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_3sdp"/>
                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_alignParentRight="true"
                    android:elevation="@dimen/_3sdp"
                    style="@style/spinnerStyle"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:src="@drawable/ic_drop_down" />
            </RelativeLayout>
            <TextView
                android:visibility="gone"
                style="@style/TvHeadingStyle"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorWhite"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/user_name" />


                <EditText
                    android:visibility="gone"
                    android:id="@+id/etEmailOrUsername"
                    style="@style/editTextStyle"
                    android:drawableRight="@drawable/ic_email"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:hint="Username"
                    android:inputType="textEmailAddress"/>


            <TextView
                style="@style/TvHeadingStyle"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/colorWhite"
                android:paddingStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/editTextStyle"
                android:layout_marginTop="@dimen/_3sdp"
                android:hint="Password"
                android:drawableRight="@drawable/ic_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvForgetPassword"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPink"
                android:layout_width="match_parent"
                android:textSize="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:textAlignment="viewEnd"
                style="@style/TvHeadingStyle" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/buttonStyle"
                android:layout_marginTop="@dimen/_80sdp"
                android:textAllCaps="false"
                android:layout_marginBottom="@dimen/_50sdp"
                android:background="@drawable/button_background"
                android:text="@string/sign_in" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_10sdp"
                    android:textAlignment="viewEnd"
                    style="@style/TvHeadingStyle" />

                <TextView
                    android:text="@string/login"
                    android:textColor="@color/colorPink"
                    android:layout_width="wrap_content"
                    android:textSize="@dimen/_12sdp"
                    android:textAlignment="viewEnd"
                    style="@style/TvHeadingStyle" />


            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>
